# intel-tbb-experiments

./: CMakeLists.txt  README.md
parallel_histogram/: CMakeLists.txt  parallel_histogram.hpp  parallel_histogram_test.cpp
parallel_min_max/: CMakeLists.txt  parallel_min_max.hpp  parallel_min_max_test.cpp
parallel_pow/: CMakeLists.txt  parallel_pow.hpp  parallel_pow_test.cpp
parallel_rotate/: CMakeLists.txt  parallel_rotate.hpp  parallel_rotate_test.cpp
