cmake_minimum_required(VERSION 2.6)
PROJECT(intel-tbb-experiments)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

ENABLE_TESTING()

ADD_DEFINITIONS(-Wall)

FIND_PACKAGE(Boost)
FIND_PACKAGE(TBB)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TBB_INCLUDE_DIR})

ADD_SUBDIRECTORY(parallel_pow)
ADD_SUBDIRECTORY(parallel_min_max)
ADD_SUBDIRECTORY(parallel_histogram)
ADD_SUBDIRECTORY(parallel_rotate)
